# rustyjam2

./: .gitignore  Cargo.toml  README.md  buildweb.sh
src/: entities.rs  gfx.rs  main.rs  ui.rs
web/: .gitignore  index.html
