[package]
name = "jamgame"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7", features=["jpeg"] }
bevy_egui = "0.14"
bevy_prototype_lyon = "0.5.0"
fastrand = "1.7.0"

[profile.dev.package."*"]
opt-level = 3
