[package]
name = "jamgame"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_egui = "0.14"
bevy_prototype_lyon = "0.5.0"
fastrand = "1.7.0"
bevy_spatial = { version = "0.1.1", features=["kdtree"] }
bevy_kira_audio = "0.10.0"

[dependencies.bevy]
version = "0.7.0"
default-features = false
features = [
    "bevy_sprite",
    "bevy_render",
    "bevy_winit",
    "x11",
    "bevy_text",
    "jpeg",
    "png"
]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = "none"
lto = "thin"