[package]
name = "jamgame"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_egui = "0.14"
fastrand = "1.7.0"
bevy_spatial = { version = "0.1.1", features=["kdtree"] }

[dependencies.bevy]
version = "0.7.0"
default-features = false
features = [
    "bevy_sprite",
    "bevy_render",
    "bevy_audio",
    "bevy_winit",
    "x11",
    "bevy_text",
    "jpeg",
    "png",
    "vorbis"
]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = "none"
lto = "thin"